@@ -16,8 +16,6 @@
 
 package com.google.testing.compile;
 
-import com.google.common.collect.ImmutableSet;
-
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.Messager;
 import javax.annotation.processing.ProcessingEnvironment;
@@ -48,7 +46,7 @@ final class ErrorProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return ImmutableSet.of("*");
+        return Set.of("*");
     }
 
     @Override
