@@ -16,8 +16,6 @@
 
 package com.google.testing.compile;
 
-import com.google.common.collect.ImmutableSet;
-
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.annotation.processing.RoundEnvironment;
@@ -44,7 +42,7 @@ final class NoOpProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return ImmutableSet.of("*");
+        return Set.of("*");
     }
 
     @Override
