@@ -16,7 +16,6 @@
 
 package com.google.testing.compile;
 
-import com.google.common.collect.ImmutableSet;
 
 import javax.annotation.processing.AbstractProcessor;
 import javax.annotation.processing.RoundEnvironment;
@@ -33,7 +32,7 @@ final class ThrowingProcessor extends AbstractProcessor {
 
     @Override
     public Set<String> getSupportedAnnotationTypes() {
-        return ImmutableSet.of("*");
+        return Set.of("*");
     }
 
     @Override
